--- a/public/index.html
+++ b/public/index.html
@@ -2,35 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
+
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
-    <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Teko&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta name="title" content="Rebel X Crew - Mint NFT">
-    <meta name="description" content="RebelXCrew are a clan made up of 4,444 Rebels who were exiled because they were infected with X. No one knows where the virus came from, only that it infected their souls. Their ritual of burning the dead had the unfortunate consequence of releasing their infected souls into the Metaverse.">
+    <meta name="title" content="Rebel X Crew - Mint NFT" />
+    <meta
+      name="description"
+      content="RebelXCrew are a clan made up of 4,444 Rebels who were exiled because they were infected with X. No one knows where the virus came from, only that it infected their souls. Their ritual of burning the dead had the unfortunate consequence of releasing their infected souls into the Metaverse."
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mint.rebelxcrew.com/">
-    <meta property="og:title" content="Rebel X Crew - Mint NFT">
-    <meta property="og:description" content="RebelXCrew are a clan made up of 4,444 Rebels who were exiled because they were infected with X. No one knows where the virus came from, only that it infected their souls. Their ritual of burning the dead had the unfortunate consequence of releasing their infected souls into the Metaverse.">
-    <meta property="og:image" content="%PUBLIC_URL%/icon.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mint.rebelxcrew.com/" />
+    <meta property="og:title" content="Rebel X Crew - Mint NFT" />
+    <meta
+      property="og:description"
+      content="RebelXCrew are a clan made up of 4,444 Rebels who were exiled because they were infected with X. No one knows where the virus came from, only that it infected their souls. Their ritual of burning the dead had the unfortunate consequence of releasing their infected souls into the Metaverse."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/icon.png" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://mint.rebelxcrew.com/">
-    <meta property="twitter:title" content="Rebel X Crew - Mint NFT">
-    <meta property="twitter:description" content="RebelXCrew are a clan made up of 4,444 Rebels who were exiled because they were infected with X. No one knows where the virus came from, only that it infected their souls. Their ritual of burning the dead had the unfortunate consequence of releasing their infected souls into the Metaverse.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/icon.png">
-
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mint.rebelxcrew.com/" />
+    <meta property="twitter:title" content="Rebel X Crew - Mint NFT" />
+    <meta
+      property="twitter:description"
+      content="RebelXCrew are a clan made up of 4,444 Rebels who were exiled because they were infected with X. No one knows where the virus came from, only that it infected their souls. Their ritual of burning the dead had the unfortunate consequence of releasing their infected souls into the Metaverse."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/icon.png" />
+    <link rel="stylesheet" href="index.css" />
     <title>Rebel X Crew - Mint NFT</title>
-    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
